--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "tic-tac-toe",
   "version": "1.0.0",
+  "engines": {
+    "node": "18.x"
+  },
   "main": "index.js",
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
